# little-jotjotsaw-base

./: .gitignore  CLAUDE.md  README.md
.claude-plugin/: marketplace.json  plugin.json
docs/: DOCUMENT_GUIDE.md
docs/diagrams/: agent-org-confirm-chain.md  discord-notification-flow.md  github-workflow-hierarchy.md  session-management-flow.md
docs/process/: AGENT_SYSTEM.md  GITHUB_WORKFLOW.md  PROCESS_GUIDE.md  SDLC_WORKFLOW.md
docs/projects/discord-mcp-alert/: OVERVIEW.md
docs/projects/finance-tracker/: OVERVIEW.md
docs/troubleshooting/: 2026-07-finance-tracker.md  INDEX.md
skills/agent-system/: SKILL.md
skills/confirm-chain/: SKILL.md
skills/research/: SKILL.md
skills/review-pr/: SKILL.md
skills/sdlc-guide/: SKILL.md
tools/confirm-chain/: README.md  confirm_chain.py  pyproject.toml  test_confirm_chain.py
tools/research-issue/: .env.example  README.md  research-issue.mjs
tools/review-pr/: README.md  review-pr.mjs
